changed aliasList to LinkedList instead of List